--- a/templates/project_team.html
+++ b/templates/project_team.html
@@ -5,7 +5,10 @@
             <ul class="list-group mt-3">
                 {% for participant in participants %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{ participant.name }}
+                    <div>
+                        <div class="font-weight-bold">{{ participant.name }}</div>
+                        <small class="text-muted">Role: {{ participant.role }}</small>
+                    </div>
                     <i class="material-icons-outlined">person</i>
                 </li>
                 {% endfor %}
